--- a/Cafeteria/Index.html
+++ b/Cafeteria/Index.html
@@ -25,16 +25,16 @@
 				</a>
 
 				<nav>
-					<a href="#">Home</a>
-					<a href="#">Sobre</a>
-					<a href="#">Endereço</a>
+					<a href="#home">Home</a>
+					<a href="#sobre">Sobre</a>
+					<a href="#" onclick="clicouNobotao()">Endereço</a>
 				</nav>
 			</section>
 		</header>
 
-		<section class="caixa-principal">
+		<section id="home" class="caixa-principal">
 			<div>
-				<h3>Code com o Melhor café da região</h3>
+				<h3>Experimente o melhor <span>café</span> da região</h3>
 				<p>
 					Lorem ipsum dolor sit amet consectetur, adipisicing elit.
 					Quis consequatur, iusto cupiditate, beatae exercitationem
@@ -47,14 +47,14 @@
 		</section>
 
 		<section class="caixa-sobre">
-			<h2><span>Sobre</span> Nós</h2>
+			<h2 class="titulo"><span>Sobre</span> Nós</h2>
 			<div class="sobre-container">
 				<div class="sobre-img">
 					<img src="img/about-img.jpg" alt="image-sobre" />
 				</div>
 
 				<div class="sobre-texto">>
-					<h3>O que faz nosso café especial</h3>
+					<h3 id="sobre">O que faz nosso café especial</h3>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipisicing
 						elit. Facilis, tempore. Optio earum quas doloribus
@@ -68,5 +68,15 @@
 				</div>
 			</div>
 		</section>
+
+		<div class="modal">
+			<h3 class="titulo"><span>Nosso</span> Endereço</h3>
+
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20954.722348111474!2d-49.6234400446661!3d-21.807082898989183!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94be467589002709%3A0x54c03e662abc324e!2sCafel%C3%A2ndia%2C%20SP%2C%2016500-000!5e0!3m2!1spt-PT!2sbr!4v1742854809217!5m2!1spt-PT!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" frameborder="0"></iframe>
+		</div>
+
+		<div class="mascara-iframe" onclick="esconderModal()"></div>
+
+		<script src="scripts.js"></script>
 	</body>
 </html>
