--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				<div class="projetos-card">
 					<img
 						src="img/preview.jpg"
-						alt="Projeot 1"
+						alt="Projeot 2"
 						class="projetos-imagem"
 					/>
 					<div class="textos-projetos">
@@ -83,6 +83,24 @@
 							target="_blank"
 							><p class="p-projetos">
 								Uso de receitas de alimentos ou outros tipos que convém o uso de listas, para ajudar os usuários na prática
+							</p></a
+						>
+					</div>
+				</div>
+				<div class="projetos-card">
+					<img
+						src="img/Cafe.jpg"
+						alt="Projeot 3"
+						class="projetos-imagem"
+					/>
+					<div class="textos-projetos">
+						<h3 class="info-projetos">Cafeteria</h3>
+						<a
+							class="link-projetos"
+							href="https://yan-arthur.github.io/Projetos/#"
+							target="_blank"
+							><p class="p-projetos">
+								Site destinado a divulgar uma cafeteria, com foco em programação, porém sendo posssível a utilização de outros tipos de conteúdos
 							</p></a
 						>
 					</div>
