--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<h3 class="info-projetos">Publisher</h3>
 						<a
 							class="link-projetos"
-							href="https://yan-arthur.github.io/Product-preview-card-component/"
+							href="https://yan-arthur.github.io/Social-Link/"
 							target="_blank"
 							><p class="p-projetos">
 								Página dedicada a propraganda de produto, com foco na estética e desing, de fácil uso para qualquer modelo de negócios.
