--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
 
 				<div class="projetos-card">
 					<img
-						src="img/desktop-preview.jpg"
+						src="img/Link.png"
 						alt="Projeot 1"
 						class="projetos-imagem"
 						a
 					/>
 					<div class="textos-projetos">
-						<h3 class="info-projetos">Publisher</h3>
+						<h3 class="info-projetos">Profile Link</h3>
 						<a
 							class="link-projetos"
 							href="https://yan-arthur.github.io/Social-Link/"
 							target="_blank"
 							><p class="p-projetos">
-								Página dedicada a propraganda de produto, com foco na estética e desing, de fácil uso para qualquer modelo de negócios.
+								Site destinado a compartilhar links de redes sociais, como LinkedIn, GitHub, Instagram, entre outros. 
 							</p></a
 						>
 					</div>
