--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@
 			</form>
 		</section>
 
+		<footer>
+			<div class="foot">Portfólio com informações provisórias e suscetível a atualizações</div>
+		</footer>
+
 		<script>
 			function enviarWhats(event) {
 				event.preventDefault();
