--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</nav>
 		<main id="inicio" class="cabecalho">
 			<img
-				src="img/WhatsApp Image 2025-03-21 at 15.56.46.jpeg"
+				src="img/asdasddasfage 2025-05-21 at 20.29.08 (1) (1).jpg"
 				alt="Foto de Yan Arthur"
 				class="perfil"
 			/>
